myReddit app has layout, css, some posts and the posts could be deleted

--- a/week-10/Reddit/src/main/resources/application.properties
+++ b/week-10/Reddit/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/reddit
+spring.datasource.url=jdbc:mysql://localhost/reddit
 spring.datasource.username=root
 spring.datasource.password=BA71367VZ6kQcz7p
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
