--- a/week-10/Reddit/build.gradle
+++ b/week-10/Reddit/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 
 dependencies {
-	// compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
