--- a/week-10/Reddit/build.gradle
+++ b/week-10/Reddit/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	compile group: 'junit', name: 'junit', version: '4.12'
