--- a/week-08/workshop03/build.gradle
+++ b/week-08/workshop03/build.gradle
@@ -18,5 +18,6 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
     // https://mvnrepository.com/artifact/com.h2database/h2
     compile group: 'com.h2database', name: 'h2', version: '1.4.189'
+    compileOnly "org.projectlombok:lombok:1.16.12"
 
 }
